--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   email_validator: '^2.1.16'
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  dropdown_button2: ^1.9.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +69,7 @@ flutter:
   assets:
     - assets/image/iconhome.png
     - assets/image/iconlogin.png
+    - assets/image/profilecircle.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
